# ai-platform-trainer

./: DEPLOYMENT.md  Dockerfile  README.md  ai-platform-trainer.spec  build_executable.py  cleanup_old_code.py  config.json  config_manager.py  debug_enemy_rl.py  gemini.md  generate_sprites.py  launcher.py  pyproject.toml  requirements.txt  reward_function_comparison.py  run_game.py  setup.py  test_enemy_rl.py  test_missile_ai.py  train_missile_ai.py  unified_launcher.py
.github/workflows/: deploy.yml
ai_platform_trainer/: __main__.py  main.py
ai_platform_trainer/ai/: missile_ai_loader.py
ai_platform_trainer/ai/models/: enemy_rl_agent.py
ai_platform_trainer/ai/training/: enemy_rl_environment.py  enhanced_evaluation.py  enhanced_missile_environment.py  enhanced_sac_trainer.py  missile_rl_benchmark.py  missile_rl_config.py  train_missile_rl.py  train_missile_sac.py
ai_platform_trainer/ai_model/: train_missile_model.py
ai_platform_trainer/core/: interfaces.py  screen_context.py
ai_platform_trainer/cpp/: CMakeLists.txt
ai_platform_trainer/cpp/include/: physics.h
ai_platform_trainer/engine/rendering/: __init__.py  sprite_manager.py
ai_platform_trainer/entities/: enemy_learning.py  enemy_play.py  enemy_rl.py  missile.py  obstacle.py  player_play.py  player_training.py  smart_missile.py
ai_platform_trainer/entities/components/: missile.py  player_training.py
ai_platform_trainer/game/: __init__.py  core.py
ai_platform_trainer/game/entities/: __init__.py  enemy.py  missile.py  player.py
ai_platform_trainer/gameplay/: collisions.py  enemy_manager.py  game.py  game_core.py  game_di.py  menu.py  renderer.py  state_machine.py
config/: __init__.py  paths.py  settings.py
data/raw/: training_data.json
logs/missile_rl/: evaluations.npz
logs/missile_sac/: evaluations.npz
scripts/: deployment_monitor.sh  pre_train_for_deployment.py  release_dashboard.md  train_models.py
src/ai_platform_trainer_new/: __init__.py
(+26 files in other folders)
