[build-system]
requires = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_platform_trainer"
version = "0.1.0"
description = "AI Platform Trainer: The PixelPursuit environment and game logic."
authors = [
    { name = "Andrew Clark" }
]
dependencies = [
    "pygame",
    "noise",
    "torch"
]